rust/macros/tests/invalid/target/rls/debug/deps/no_comma_rs-e8ff5dc20f8fad9a.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\no_comma_rs-e8ff5dc20f8fad9a.rmeta: no-comma.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\no_comma_rs-e8ff5dc20f8fad9a.d: no-comma.rs

no-comma.rs:
